--- a/pipeline-backups/03-playing-with-environment-deployment.yml
+++ b/pipeline-backups/03-playing-with-environment-deployment.yml
@@ -1,37 +1,16 @@
 trigger:
 - master
 
-# strategy:
-#   matrix:
-#     linux:
-#       operatingSystem: 'ubuntu-latest'
-#     mac:
-#       operatingSystem: 'macos-latest'
+strategy:
+  matrix:
+    linux: 
+      operatingSystem: ubuntu-latest
+    mac:
+      operatingSystem: macos-latest
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: $(operatingSystem)
 
-stages:
-- stage: Build
-  jobs:
-  - job: BuildJob
-    steps:
-    - bash: echo "Do the build"
-- stage: DevDeploy
-  jobs:
-  - deployment: DevDeployJob
-    environment: Dev
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: echo deploy to Dev
-- stage: QADeploy
-  jobs:
-  - deployment: QADeployJob
-    environment: QA
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: echo deploy to QA
+steps:
+- script: echo Running on $(operatingSystem)
+  displayName: 'One-line script'
