Update 03-playing-with-environment-deployment.yml for Azure Pipelines

--- a/pipeline-backups/03-playing-with-environment-deployment.yml
+++ b/pipeline-backups/03-playing-with-environment-deployment.yml
@@ -1,16 +1,48 @@
 trigger:
 - master
 
-strategy:
-  matrix:
-    linux: 
-      operatingSystem: ubuntu-latest
-    mac:
-      operatingSystem: macos-latest
+# strategy:
+#   matrix:
+#     linux: 
+#       operatingSystem: ubuntu-latest
+#     mac:
+#       operatingSystem: macos-latest
 
 pool:
-  vmImage: $(operatingSystem)
+  # vmImage: $(operatingSystem)
+  vmImage: ubuntu-latest
 
-steps:
-- script: echo Running on $(operatingSystem)
-  displayName: 'One-line script'
+stages:
+
+- stage: Build
+  jobs:
+  - job: BuildJob
+    steps:
+    - bash: echo "Do the build"
+
+- stage: Deploy
+  jobs:
+  - deployment: DevDeployJob
+    environment: Dev
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo deploy to Dev
+
+- stage: QADeploy
+  jobs:
+  - deployment: QADeployJob
+    environment: QA
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo deploy to QA
+
+
+
+
+# steps:
+# - script: echo Running on $(operatingSystem)
+#   displayName: 'One-line script'
