--- a/pipeline-backups/04-build-and-push-docker-image.yml
+++ b/pipeline-backups/04-build-and-push-docker-image.yml
@@ -1,5 +1,5 @@
 trigger:
-- master
+- main
 
 resources:
 - repo: self
@@ -18,8 +18,8 @@ stages:
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'in28min-docker-hub'
-        repository: 'in28min/currency-exchange-devops'
+        containerRegistry: 'in-28-min-Docker-Hub'
+        repository: 'mrbadd/currency-exchange-devops'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: '$(tag)'
